# gemini-terminal-chatbot

./: .env.bak  .gitignore  README.md  main.py  pyproject.toml
